# bro

./: .gitignore  Dockerfile  README.md  agent.js  agent.ts  bro  bro.strace  chains.js  commandr.js  install  io.js  io.ts  llm.js  llm.ts  nonInteractive.js  nonInteractive.ts  package-lock.json  package.json  pyproject.toml  search.py  setup.js  tools.js  tools.ts  tsconfig.json  ui.js  ui.ts  uninstall
.github/workflows/: release.yml
bro/: agent.py  main.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md
src/: main.py
tests/: conftest.py  test_agent.py  test_cli.py
